updated lang fields

--- a/_notes/2025-02-01-Revelation-1_7-8.md
+++ b/_notes/2025-02-01-Revelation-1_7-8.md
@@ -3,6 +3,7 @@ title:  "Revelation 1:7-8"
 date:   2025-02-01 01:00:00 -0600
 author: Steve Torres
 categories: Class Notes, Revelation, Eschatology
+lang: en
 ---
 [Download PDF](https://drive.google.com/file/d/1qgwSWZ0HRjzWjSLZq3zrqPASidp2E6LU/view)
 [Download Slides PDF](https://drive.google.com/file/d/1w-qx2FC5kkBdu0PwjGUMQIZdMsd43h_5/view)
