--- a/_notes/2025-02-08-Revelation-1_9-11.md
+++ b/_notes/2025-02-08-Revelation-1_9-11.md
@@ -3,6 +3,7 @@ title:  "Revelation 1:9-11"
 date:   2025-02-08 01:00:00 -0600
 author: Steve Torres
 categories: Class Notes, Revelation, Eschatology
+lang: en
 ---
 [Download PDF](https://drive.google.com/file/d/1p3Ze5V5g7wci0zyev_0XosMN8FVjSjr-/view)
 # Revelation 1:9-11
